[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vlad moryakov <sat1sfy@vk.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
makefile = "^1.1.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
